--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "email-service",
+  "name": "mern-boilerplate",
   "version": "0.1.0",
-  "description": "An email signup page attached to a simple database",
-  "main": "src/server.js",
+  "description": "A small boilerplate app for node/express/mongodb/nextjs/typescript",
+  "main": "",
   "author": "Benji Sidi <benji.sidi@gmail.com>",
-  "license": "UNLICENSED",
-  "private": true,
+  "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV='development' nodemon index.js",
-    "start": "yarn build && node lib/server.js",
-    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
-    "lint": "eslint 'src/**/*.{js,ts,tsx}' --fix"
+    "all": "yarn && cd server && yarn"
   },
   "husky": {
     "hooks": {
@@ -19,31 +15,18 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "eslint --fix"
+      "yarn eslint --fix"
     ]
   },
-  "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/register": "^7.9.0",
-    "@babel/runtime": "^7.9.6",
-    "@types/express": "^4.17.6",
-    "concurrently": "^5.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.12"
-  },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.9.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
-    "nodemon": "^2.0.3",
+    "lint-staged": "^10.2.9",
     "prettier": "^2.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.5"
   }
 }
