--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "mern-boilerplate-server",
-  "version": "0.1.0",
-  "description": "A small boilerplate server for node/express/mongodb",
-  "main": "-",
-  "author": "Benji Sidi <benji.sidi@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "NODE_ENV='development' nodemon index.js",
-    "start": "yarn build && node lib/server.js",
-    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
-    "lint": "cd .. && yarn eslint 'server/src/**/*.{js,ts,tsx}' --fix"
-  },
-  "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/register": "^7.9.0",
-    "@babel/runtime": "^7.9.6",
-    "@types/express": "^4.17.6",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.9.0",
-    "nodemon": "^2.0.3"
-  }
+    "name": "mern-boilerplate-server",
+    "version": "0.1.0",
+    "description": "A small boilerplate server for node/express/mongodb",
+    "main": "index.js",
+    "author": "Benji Sidi <benji.sidi@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "dev": "NODE_ENV='development' nodemon index.js",
+        "start": "yarn build && node lib/server.js",
+        "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
+        "lint": "cd .. && yarn eslint 'server/src/**/*.{js,ts,tsx}' --fix"
+    },
+    "dependencies": {
+        "@babel/cli": "^7.8.4",
+        "@babel/plugin-transform-runtime": "^7.9.6",
+        "@babel/register": "^7.9.0",
+        "@babel/runtime": "^7.9.6",
+        "@types/express": "^4.17.6",
+        "express": "^4.17.1",
+        "mongoose": "^5.9.12"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.9.6",
+        "@babel/preset-env": "^7.9.6",
+        "@babel/preset-typescript": "^7.9.0",
+        "nodemon": "^2.0.3"
+    }
 }
