Added basic nextjs client

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-node_modules
-lib
-./**/node_modules
-./**/lib
+# Node modules and builds
+node_modules/
+lib/
+dist/
+.next/
+
+# Env files
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
