--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Benji Sidi <benji.sidi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "all": "yarn && cd server && yarn"
+    "all": "yarn && yarn --cwd \"./client\" && yarn --cwd \"./server\""
   },
   "husky": {
     "hooks": {
