--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,25 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.11",
-    "@types/react": "^16.9.35"
+    "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.9",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "yarn eslint --fix"
+    ]
   }
 }
