--- a/package.json
+++ b/package.json
@@ -1,12 +1,43 @@
 {
-  "name": "mern-boilerplate",
+  "name": "mern-boilerplate-server",
   "version": "0.1.0",
-  "description": "A small boilerplate app for node/express/mongodb/nextjs/typescript",
-  "main": "",
+  "description": "A small boilerplate server for node/express/mongodb",
+  "main": "index.js",
   "author": "Benji Sidi <benji.sidi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "all": "yarn && yarn --cwd \"./client\" && yarn --cwd \"./server\""
+    "install:all": "yarn  install && yarn --cwd client install",
+    "dev:server": "NODE_ENV='development' nodemon index.js",
+    "dev:client": "yarn --cwd client dev",
+    "dev": "concurrently -k -i \"yarn dev:server\" \"yarn dev:client\"",
+    "start": "yarn build && node lib/server.js",
+    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'",
+    "lint": "yarn eslint './**/*.{js,ts,tsx}' --fix"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.6",
+    "@types/express": "^4.17.6",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.12"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.9",
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.5"
   },
   "husky": {
     "hooks": {
@@ -17,16 +48,5 @@
     "*.{js,ts}": [
       "yarn eslint --fix"
     ]
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.9",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.5"
   }
 }
